--- a/helloplus/nmaheshw/index.html
+++ b/helloplus/nmaheshw/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,14 +18,29 @@
     <title>Document</title>
   </head>
   <body>
+    <button
+      class="btn btn-light"
+      type="button"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#staticBackdrop"
+      aria-controls="staticBackdrop"
+    >
+      <img
+        src="bucket.jpeg"
+        alt="Button image"
+        style="width: 70px; height: 100px; object-fit: cover"
+      />
+    </button>
+
     <div
-      class="offcanvas offcanvas-start show"
+      class="offcanvas offcanvas-start"
+      data-bs-backdrop="static"
       tabindex="-1"
-      id="offcanvas"
-      aria-labelledby="offcanvasLabel"
+      id="staticBackdrop"
+      aria-labelledby="staticBackdropLabel"
     >
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasLabel">Offcanvas</h5>
+        <h5 class="offcanvas-title" id="staticBackdropLabel">Bucket List</h5>
         <button
           type="button"
           class="btn-close"
@@ -33,8 +49,7 @@
         ></button>
       </div>
       <div class="offcanvas-body">
-        Content for the offcanvas goes here. You can place just about any
-        Bootstrap component or custom elements here.
+        <div>Here are the destinations that you have added to your list!</div>
       </div>
     </div>
   </body>
