--- a/helloplus/wsv346/index.html
+++ b/helloplus/wsv346/index.html
@@ -9,54 +9,58 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>jweste25</title>
 </head>
 
 <body class="p-3">
 
-    <!-- This is the structure for the placeholder Amsterdam Card. -->
     <div class="container">
-        <div class="card" style="width: 18rem;" data-bs-toggle="offcanvas" data-bs-target="#Amsterdam"
-            aria-controls="offcanvasExample">
-            <img src="img/amsterdam.jpeg" class="card-img-top" alt="Image of Amsterdam">
-            <div class="card-body">
-                <p class="card-text">Amsterdam, Denmark</p>
+        <div class="row">
+            <!-- This is the structure for the placeholder Amsterdam Card. -->
+            <div class="col-md-6 mb-3">
+                <div class="card" style="width: 18rem;" data-bs-toggle="offcanvas" data-bs-target="#Amsterdam"
+                    aria-controls="offcanvasExample">
+                    <img src="img/amsterdam.jpeg" class="card-img-top fixed-size-img" alt="Image of Amsterdam">
+                    <div class="card-body">
+                        <p class="card-text">Amsterdam, Denmark</p>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-
-    <!-- This is the structure for the placeholder City Card. -->
-    <div class="container mb-3">
-        <div class="card" style="width: 18rem;" data-bs-toggle="offcanvas" data-bs-target="#City"
-            aria-controls="offcanvasExample">
-            <img src="img/under.jpeg" class="card-img-top" alt="Image of City">
-            <div class="card-body">
-                <p class="card-text">City, Country</p>
+            <!-- This is the structure for the placeholder City Card. -->
+            <div class="col-md-6 mb-3">
+                <div class="card" style="width: 18rem;" data-bs-toggle="offcanvas" data-bs-target="#City"
+                    aria-controls="offcanvasExample">
+                    <img src="img/under.jpeg" class="card-img-top fixed-size-img" alt="Image of City">
+                    <div class="card-body">
+                        <p class="card-text">City, Country</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- This is the offCanvas for Amsterdam. -->
-    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="Amsterdam"
+    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Amsterdam"
         aria-labelledby="AmsterdamOffCanvas">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="AmsterdamOffCanvas">Amsterdam, Netherlands</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body">
+        <div class="offcanvas-body p-3">
             <p>This is Amsterdam, Netherlands.</p>
         </div>
     </div>
 
     <!-- This is the offCanvas for Tokyo. -->
-        <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="City"
+        <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="City"
             aria-labelledby="CityOffCanvas">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="CityOffCanvas">City, Country</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
+            <div class="offcanvas-body p-3">
                 <p>This is City, Country.</p>
             </div>
         </div>
