--- a/helloplus/wsv346/index.html
+++ b/helloplus/wsv346/index.html
@@ -48,22 +48,113 @@
             <h5 class="offcanvas-title" id="AmsterdamOffCanvas">Amsterdam, Netherlands</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body p-3">
-            <p>This is Amsterdam, Netherlands.</p>
+        <div class="offcanvas-body">
+            <!-- Add to Bucket List Button -->
+            <div class="d-flex justify-content-center align-items-center mb-3">
+                <button type="button" class="btn btn-outline-success w-100">Add City to Bucket List</button>
+            </div>
+            <!-- This is the main accordion for each city's information -->
+            <div class="accordion w-100" id="MainAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#TopSpots" aria-expanded="true" aria-controls="TopSpots">
+                            Top Spots
+                        </button>
+                    </h2>
+                    <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
+                        <div class="accordion-body">
+                            Top Spots items will be listed here.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#PlacesToEat" aria-expanded="false" aria-controls="PlacesToEat">
+                            Places to Eat
+                        </button>
+                    </h2>
+                    <div id="PlacesToEat" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+                        <div class="accordion-body">
+                            Places to Eat items will be listed here.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#Lodging" aria-expanded="false" aria-controls="Lodging">
+                            Lodging
+                        </button>
+                    </h2>
+                    <div id="Lodging" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+                        <div class="accordion-body">
+                            Lodging items will be listed here.
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
     <!-- This is the offCanvas for Tokyo. -->
-        <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="City"
-            aria-labelledby="CityOffCanvas">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="CityOffCanvas">City, Country</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body p-3">
-                <p>This is City, Country.</p>
+    <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="City" aria-labelledby="CityOffCanvas">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="CityOffCanvas">City, Country</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body p-3">
+            <div class="offcanvas-body">
+                <!-- Add to Bucket List Button -->
+                <div class="d-flex justify-content-center align-items-center mb-3">
+                    <button type="button" class="btn btn-outline-success w-100">Add City to Bucket List</button>
+                </div>
+                <!-- This is the main accordion for each city's information -->
+                <div class="accordion w-100" id="MainAccordion">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#TopSpots" aria-expanded="true" aria-controls="TopSpots">
+                                Top Spots
+                            </button>
+                        </h2>
+                        <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
+                            <div class="accordion-body">
+                                Top Spots items will be listed here.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#PlacesToEat" aria-expanded="false" aria-controls="PlacesToEat">
+                                Places to Eat
+                            </button>
+                        </h2>
+                        <div id="PlacesToEat" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+                            <div class="accordion-body">
+                                Places to Eat items will be listed here.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#Lodging" aria-expanded="false" aria-controls="Lodging">
+                                Lodging
+                            </button>
+                        </h2>
+                        <div id="Lodging" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+                            <div class="accordion-body">
+                                Lodging items will be listed here.
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 
 </body>
 
