--- a/helloplus/wsv346/index.html
+++ b/helloplus/wsv346/index.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <!-- This is the offCanvas for Tokyo. -->
+    <!-- This is the offCanvas for placeholder card. -->
     <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="City" aria-labelledby="CityOffCanvas">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="CityOffCanvas">City, Country</h5>
