--- a/helloplus/tbissaho/index.html
+++ b/helloplus/tbissaho/index.html
@@ -1,20 +1,53 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+      .card-img{
+        opacity: 0.5;
+      }
+    </style>
+
+    <style>
+      label{
+        display: block;
+        padding-left: 259px;
+        text-indent: -15px;
+      }
+
+      input[type='checkbox'] {
+        width: 20px;
+        height: 20px;
+        padding: 0;
+        margin:0;
+        vertical-align: bottom;
+        position: relative;
+        top: -15px;
+        left: -15px;
+        accent-color: rgba(249, 250, 179, 0.238);
+      }
+    </style>
+  </head>
 <body>
-    <div class="card" style="width: 18rem;"></div>
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">TRINITY BISSSAHOYO</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="card bg-dark text-white text-center" style="width: 300px; height 200px;">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/63/2014_Victoria_Island_Lagos_Nigeria_15006436297.jpg" class="card-img" alt="..." style="height: 100%; object-fit: cover;">
+  <div class="card-img-overlay">
+    <!-- Default checkbox -->
+    <div class="form-check">
+      <label><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" object align="left"/></label>
+      <!--<label class="form-check-label" for="flexCheckDefault">Add to Bucket</label>-->
+    </div>
+  <h5 class="card-title">Lagos, Nigeria</h5>
   </div>
 </div>
+
 </body>
 </html>
+
+
+<!--Make sure when copying the overlay infromation are inside of the card div-->
