--- a/src/japan.html
+++ b/src/japan.html
@@ -1,20 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
-</head>
-
-<body>
-
-</body>
-
+  </head>
+  <body>
+    <nav class="nav-header">
+      <div class="container-fluid">
+        <button
+          class="bucket-icon"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#staticBackdrop"
+          aria-controls="staticBackdrop"
+        >
+          <img
+            src="img/bucket.png"
+            alt="bucket image"
+            style="width: 70px; height: 100px; object-fit: cover"
+          />
+        </button>
+        <a class="navbar-brand" href="#">PICK UR PLACE</a>
+      </div>
+    </nav>
+    <hr class="navbar-brand-hr" />
+    <div
+      class="offcanvas offcanvas-start"
+      data-bs-backdrop="static"
+      tabindex="-1"
+      id="staticBackdrop"
+      aria-labelledby="staticBackdropLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="staticBackdropLabel">MY BUCKET LIST</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <hr class="destinations-hr" />
+      <div class="list-offcanvas-body">
+        <div>
+          <p class="destinations-offcanvas-label">
+            Here are the destinations that you have added to your list. Have a
+            wonderful trip!
+          </p>
+          <hr class="destinations-hr" />
+          <ul class="list-group">
+            <li class="list-group-item" aria-disabled="false">
+              <span>Tokyo: Top Spot 1</span>
+              <button class="btn-delete-list-item">Remove</button>
+            </li>
+            <li class="list-group-item">
+              <span>Tokyo: Top Spot 2</span>
+              <button class="btn-delete-list-item">Remove</button>
+            </li>
+            <li class="list-group-item">
+              <span>Tokyo: Top Spot 3</span>
+              <button class="btn-delete-list-item">Remove</button>
+            </li>
+            <li class="list-group-item">
+              <span>Kyoto: Top Spot 1</span>
+              <button class="btn-delete-list-item">Remove</button>
+            </li>
+            <li class="list-group-item">
+              <span>Kyoto: Top Spot 2</span>
+              <button class="btn-delete-list-item">Remove</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
