--- a/src/argentina.html
+++ b/src/argentina.html
@@ -2,19 +2,239 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/argentina.css" />
+  <script type="module" src="js/argentina.js" defer></script>
+  <title>Argentina</title>
 </head>
 
-<body>
+<body class="p-3">
+  <div class="container">
+    <div class="row">
+      <!-- This is the structure for the placeholder Buenos Aires Card. -->
+      <div class="col-md-6 mb-3">
+        <div class="card" style="width: 18rem" data-bs-toggle="offcanvas" data-bs-target="#BuenosAires"
+          aria-controls="offcanvasExample">
+          <img src="img/argentina/buenos-aires/BA1.jpeg" class="card-img-top fixed-size-img"
+            alt="Image of Buenos Aires" />
+          <div class="card-body">
+            <p class="card-text">Buenos Aires, Argentina</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <!-- This is the offCanvas for Buenos Aires. -->
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="BuenosAires"
+    aria-labelledby="BuenosAiresOffCanvas">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="BuenosAiresOffCanvas">
+        Buenos Aires, Argentina
+      </h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <!-- Add to Bucket List Button -->
+      <div class="d-flex justify-content-center align-items-center mb-3">
+        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+          Add City to Bucket List
+        </button>
+      </div>
+      <!-- This is the main accordion for each city's information -->
+      <div class="accordion w-100" id="MainAccordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#TopSpots"
+              aria-expanded="true" aria-controls="TopSpots">
+              Top Spots
+            </button>
+          </h2>
+          <div id="TopSpots" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+            <div class="accordion-body nested-first">
+              <!-- This is the nested accordion for Top Spots information -->
+              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#TopSpots-collapseOne" aria-expanded="false" aria-controls="TopSpots-collapseOne">
+                      Top Spot #1
+                    </button>
+                  </h2>
+                  <div id="TopSpots-collapseOne" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body topSpots-accordion">
+                      <div class="centered-nested-accordian-img-container">
+                        <img src="img/main/under.jpeg" class="nested-accordion-img" />
+                      </div>
+                      <p>
+                        This it the <b>first</b> top spot to visit and a blurb
+                        about why.
+                      </p>
+                      <button class="add-remove-button btn btn-outline-success">
+                        Add
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#TopSpots-collapseTwo" aria-expanded="false" aria-controls="TopSpots-collapseTwo">
+                      Top Spot #2
+                    </button>
+                  </h2>
+                  <div id="TopSpots-collapseTwo" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body topSpots-accordion">
+                      <div class="centered-nested-accordian-img-container">
+                        <img src="img/main/under.jpeg" class="nested-accordion-img" />
+                      </div>
+                      <p>
+                        This it the <b>second</b> top spot to visit and a
+                        blurb about why.
+                      </p>
+                      <button class="add-remove-button btn btn-outline-success">
+                        Add
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#PlacesToEat" aria-expanded="false" aria-controls="PlacesToEat">
+              Places to Eat
+            </button>
+          </h2>
+          <div id="PlacesToEat" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+            <div class="accordion-body nested-first">
+              <!-- This is the nested accordion for Places To Eat information -->
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#PlacesToEat-collapseOne" aria-expanded="false"
+                      aria-controls="PlacesToEat-collapseOne">
+                      Place #1
+                    </button>
+                  </h2>
+                  <div id="PlacesToEat-collapseOne" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body topSpots-accordion">
+                      <div class="centered-nested-accordian-img-container">
+                        <img src="img/main/under.jpeg" class="nested-accordion-img" />
+                      </div>
+                      <p>
+                        This it the <b>first</b> place to eat and a blurb
+                        about why.
+                      </p>
+                      <button class="add-remove-button btn btn-outline-success">
+                        Add
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#PlacesToEat-collapseTwo" aria-expanded="false"
+                      aria-controls="PlacesToEat-collapseTwo">
+                      Place #2
+                    </button>
+                  </h2>
+                  <div id="PlacesToEat-collapseTwo" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body topSpots-accordion">
+                      <div class="centered-nested-accordian-img-container">
+                        <img src="img/main/under.jpeg" class="nested-accordion-img" />
+                      </div>
+                      <p>
+                        This it the <b>second</b> place to eat and a blurb
+                        about why.
+                      </p>
+                      <button class="add-remove-button btn btn-outline-success">
+                        Add
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Lodging"
+              aria-expanded="false" aria-controls="Lodging">
+              Lodging
+            </button>
+          </h2>
+          <div id="Lodging" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+            <div class="accordion-body nested-first">
+              <!-- This is the nested accordion for Lodging information -->
+              <div class="accordion accordion-flush w-100" id="LodgingList">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#Lodging-collapseOne" aria-expanded="false" aria-controls="Lodging-collapseOne">
+                      Lodging #1
+                    </button>
+                  </h2>
+                  <div id="Lodging-collapseOne" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body topSpots-accordion">
+                      <div class="centered-nested-accordian-img-container">
+                        <img src="img/main/under.jpeg" class="nested-accordion-img" />
+                      </div>
+                      <p>
+                        This it the <b>first</b> lodge and a blurb about why.
+                      </p>
+                      <button class="add-remove-button btn btn-outline-success">
+                        Add
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#Lodging-collapseTwo" aria-expanded="false" aria-controls="Lodging-collapseTwo">
+                      Lodging #2
+                    </button>
+                  </h2>
+                  <div id="Lodging-collapseTwo" class="accordion-collapse collapse"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body topSpots-accordion">
+                      <div class="centered-nested-accordian-img-container">
+                        <img src="img/main/under.jpeg" class="nested-accordion-img" />
+                      </div>
+                      <p>
+                        This it the <b>second</b> lodge and a blurb about why.
+                      </p>
+                      <button class="add-remove-button btn btn-outline-success">
+                        Add
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
