fixed bucket image icon.

--- a/src/japan.html
+++ b/src/japan.html
@@ -34,7 +34,7 @@
           aria-controls="staticBackdrop"
         >
           <img
-            src="img/bucket.png"
+            src="img/japan/bucket.png"
             alt="bucket image"
             style="width: 70px; height: 100px; object-fit: cover"
           />
