--- a/src/japan.html
+++ b/src/japan.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="japan.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,7 +39,9 @@
             style="width: 70px; height: 100px; object-fit: cover"
           />
         </button>
-        <a class="navbar-brand" href="#">PICK UR PLACE</a>
+        <div class="header-text">
+          <a href="#">PICK UR PLACE</a>
+        </div>
       </div>
     </nav>
     <hr class="navbar-brand-hr" />
