--- a/src/japan.html
+++ b/src/japan.html
@@ -35,7 +35,7 @@
           aria-controls="staticBackdrop"
         >
           <img
-            src="img/japan/bucket.jpeg"
+            src="img/japan/bucket.png"
             alt="bucket image"
             style="width: 70px; height: 100px; object-fit: cover"
           />
