--- a/src/japan.html
+++ b/src/japan.html
@@ -43,32 +43,11 @@
           />
         </button>
         <div class="header-text">
-          <a href="#">PICK UR PLACE</a>
+          <a href="dropdowns.html">PICK UR PLACE</a>
         </div>
       </div>
     </nav>
     <hr class="navbar-brand-hr" />
-    <!-- <nav class="nav-header">
-      <div class="container-fluid">
-        <button
-          class="bucket-icon"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#staticBackdrop"
-          aria-controls="staticBackdrop"
-        >
-          <img
-            src="img/japan/bucket.png"
-            alt="bucket image"
-            style="width: 70px; height: 100px; object-fit: cover"
-          />
-        </button>
-        <div class="header-text">
-          <a href="#">PICK UR PLACE</a>
-        </div>
-      </div>
-    </nav>
-    <hr class="navbar-brand-hr" /> -->
     <div
       class="offcanvas offcanvas-start"
       data-bs-backdrop="static"
