Update accordian default

--- a/src/argentina.html
+++ b/src/argentina.html
@@ -56,7 +56,7 @@
               Top Spots
             </button>
           </h2>
-          <div id="TopSpots" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+          <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
               <div class="accordion accordion-flush w-100" id="TopSpotsList">
@@ -117,7 +117,7 @@
               Places to Eat
             </button>
           </h2>
-          <div id="PlacesToEat" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+          <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
               <div class="accordion accordion-flush w-100" id="PlacesToEatList">
@@ -180,7 +180,7 @@
               Lodging
             </button>
           </h2>
-          <div id="Lodging" class="accordion-collapse collapse" data-bs-parent="#MainAccordion">
+          <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
               <div class="accordion accordion-flush w-100" id="LodgingList">
