fix: Add bucket list offcanvas functionality to all country pages

--- a/src/france.html
+++ b/src/france.html
@@ -74,6 +74,63 @@
       </div>
     </nav>
     <hr class="navbar-brand-hr" />
+    <div
+    class="offcanvas offcanvas-start oc-bucket-list"
+    data-bs-backdrop="static"
+    tabindex="-1"
+    id="staticBackdrop"
+    aria-labelledby="staticBackdropLabel"
+  >
+    <div class="offcanvas-header oc-bucket-list-header">
+      <h5
+        class="offcanvas-title oc-bucket-list-title"
+        id="staticBackdropLabel"
+      >
+        MY BUCKET LIST
+      </h5>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="offcanvas"
+        aria-label="Close"
+      ></button>
+    </div>
+    <hr class="destinations-hr" />
+    <div class="list-offcanvas-body">
+      <div>
+        <p class="destinations-offcanvas-label">
+          Here are the destinations that you have added to your list. Have a
+          wonderful trip!
+        </p>
+        <hr class="destinations-hr" />
+        <ul class="list-group oc-bucket-list-group">
+          <li
+            class="list-group-item oc-bucket-list-group-item"
+            aria-disabled="false"
+          >
+            <span>Tokyo: Top Spot 1</span>
+            <button class="btn-delete-list-item">Remove</button>
+          </li>
+          <li class="list-group-item oc-bucket-list-group-item">
+            <span>Tokyo: Top Spot 2</span>
+            <button class="btn-delete-list-item">Remove</button>
+          </li>
+          <li class="list-group-item oc-bucket-list-group-item">
+            <span>Tokyo: Top Spot 3</span>
+            <button class="btn-delete-list-item">Remove</button>
+          </li>
+          <li class="list-group-item oc-bucket-list-group-item">
+            <span>Kyoto: Top Spot 1</span>
+            <button class="btn-delete-list-item">Remove</button>
+          </li>
+          <li class="list-group-item oc-bucket-list-group-item">
+            <span>Kyoto: Top Spot 2</span>
+            <button class="btn-delete-list-item">Remove</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
     <!--Search Bar Fucntion-->
     <nav class="search-bar">
