--- a/src/japan.html
+++ b/src/japan.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/japan.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -24,6 +25,7 @@
     ></script>
     <title>Document</title>
   </head>
+
   <body>
     <nav class="nav-header">
       <div
@@ -49,14 +51,19 @@
     </nav>
     <hr class="navbar-brand-hr" />
     <div
-      class="offcanvas offcanvas-start"
+      class="offcanvas offcanvas-start oc-bucket-list"
       data-bs-backdrop="static"
       tabindex="-1"
       id="staticBackdrop"
       aria-labelledby="staticBackdropLabel"
     >
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="staticBackdropLabel">MY BUCKET LIST</h5>
+      <div class="offcanvas-header oc-bucket-list-header">
+        <h5
+          class="offcanvas-title oc-bucket-list-title"
+          id="staticBackdropLabel"
+        >
+          MY BUCKET LIST
+        </h5>
         <button
           type="button"
           class="btn-close"
@@ -72,24 +79,27 @@
             wonderful trip!
           </p>
           <hr class="destinations-hr" />
-          <ul class="list-group">
-            <li class="list-group-item" aria-disabled="false">
+          <ul class="list-group oc-bucket-list-group">
+            <li
+              class="list-group-item oc-bucket-list-group-item"
+              aria-disabled="false"
+            >
               <span>Tokyo: Top Spot 1</span>
               <button class="btn-delete-list-item">Remove</button>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item oc-bucket-list-group-item">
               <span>Tokyo: Top Spot 2</span>
               <button class="btn-delete-list-item">Remove</button>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item oc-bucket-list-group-item">
               <span>Tokyo: Top Spot 3</span>
               <button class="btn-delete-list-item">Remove</button>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item oc-bucket-list-group-item">
               <span>Kyoto: Top Spot 1</span>
               <button class="btn-delete-list-item">Remove</button>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item oc-bucket-list-group-item">
               <span>Kyoto: Top Spot 2</span>
               <button class="btn-delete-list-item">Remove</button>
             </li>
