Add France cards and offcanvases

--- a/src/dropdowns.html
+++ b/src/dropdowns.html
@@ -28,7 +28,7 @@
             Countries </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="argentina.html">Argentina</a>
-            <a class="dropdown-item" href="france.html">France</a>
+            <a class="dropdown-item" href="france2.html">France</a>
             <a class="dropdown-item" href="japan.html">Japan</a>
             <a class="dropdown-item" href="morocco.html">Morocco</a>
             <a class="dropdown-item" href="us.html">United States</a>
