--- a/src/france2.html
+++ b/src/france2.html
@@ -22,7 +22,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/japan.css" />
+    <link rel="stylesheet" href="css/france.css" />
     <link rel="stylesheet" href="css/main.css" />
     <title>Document</title>
   </head>
@@ -112,13 +112,13 @@
     <!-- This is the container of country city cards. -->
   <div class="container p-3">
     <div class="row">
-      <!-- This is the Kyoto card -->
+      <!-- This is the Colmar card -->
       <div class="col-md-3 mb-3">
         <div class="card bg-dark text-white text-center result-items">
-          <img src="img/japan/kyoto/K1.png" class="card-img city-card" />
-          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Kyoto"
+          <img src="img/france/colmar/C1.png" class="card-img city-card" />
+          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Colmar"
             aria-controls="offcanvasExample">
-            <h5 class="card-title" style="text-indent: -15px;">Kyoto, Japan</h5>
+            <h5 class="card-title" style="text-indent: -15px;">Colmar, France</h5>
           </div>
         </div>
   
@@ -131,13 +131,13 @@
           </div>
         </div>
       </div>
-      <!-- This is the Tokyo card -->
+      <!-- This is the Paris card -->
       <div class="col-md-3 mb-3">
         <div class="card bg-dark text-white text-center result-items">
-          <img src="img/japan/tokyo/T1.jpeg" class="card-img city-card" />
-          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Tokyo"
+          <img src="img/france/paris/P1.png" class="card-img city-card" />
+          <div class="card-img-overlay" data-bs-toggle="offcanvas" data-bs-target="#Paris"
             aria-controls="offcanvasExample">
-            <h5 class="card-title" style="text-indent: -15px;">Tokyo, Japan</h5>
+            <h5 class="card-title" style="text-indent: -15px;">Paris, France</h5>
           </div>
         </div>
   
@@ -153,11 +153,11 @@
     </div>
   </div>
   
-  <!-- This is the offCanvas for Kyoto. -->
-  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Kyoto"
-    aria-labelledby="KyotoOffCanvas">
+  <!-- This is the offCanvas for Colmar. -->
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Colmar"
+    aria-labelledby="ColmarOffCanvas">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="KyotoOffCanvas">
+      <h5 class="offcanvas-title" id="ColmarOffCanvas">
         City, Country
       </h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -170,23 +170,23 @@
         </button>
       </div>
       <!-- Image Carousel -->
-      <div id="KyotoCarousel" class="carousel slide" style="padding-bottom: 4%;">
+      <div id="ColmarCarousel" class="carousel slide" style="padding-bottom: 4%;">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/japan/kyoto/K1.png" class="d-block w-100 fixed-size-img">
+            <img src="img/france/colmar/C1.png" class="d-block w-100 fixed-size-img">
           </div>
           <div class="carousel-item">
-            <img src="img/japan/kyoto/K2.avif" class="d-block w-100 fixed-size-img">
+            <img src="img/france/colmar/C2.png" class="d-block w-100 fixed-size-img">
           </div>
           <div class="carousel-item">
-            <img src="img/japan/kyoto/K3.png" class="d-block w-100 fixed-size-img">
+            <img src="img/france/colmar/C3.png" class="d-block w-100 fixed-size-img">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#KyotoCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#ColmarCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#KyotoCarousel" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#ColmarCarousel" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
@@ -381,11 +381,11 @@
     </div>
   </div>
   
-  <!-- This is the offCanvas for Tokyo. -->
-  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Tokyo"
-    aria-labelledby="TokyoOffCanvas">
+  <!-- This is the offCanvas for Paris. -->
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Paris"
+    aria-labelledby="ParisOffCanvas">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="TokyoOffCanvas">
+      <h5 class="offcanvas-title" id="ParisOffCanvas">
         City, Country
       </h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -398,23 +398,23 @@
         </button>
       </div>
       <!-- Image Carousel -->
-      <div id="TokyoCarousel" class="carousel slide" style="padding-bottom: 4%;">
+      <div id="ParisCarousel" class="carousel slide" style="padding-bottom: 4%;">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/japan/tokyo/T1.jpeg" class="d-block w-100 fixed-size-img">
+            <img src="img/france/paris/P1.png" class="d-block w-100 fixed-size-img">
           </div>
           <div class="carousel-item">
-            <img src="img/japan/tokyo/T2.jpg" class="d-block w-100 fixed-size-img">
+            <img src="img/france/paris/P2.png" class="d-block w-100 fixed-size-img">
           </div>
           <div class="carousel-item">
-            <img src="img/japan/tokyo/T3.png" class="d-block w-100 fixed-size-img">
+            <img src="img/france/paris/P3.png" class="d-block w-100 fixed-size-img">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#TokyoCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#ParisCarousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#TokyoCarousel" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#ParisCarousel" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
