Add 'Add/Remove' button functionality to all pages

--- a/src/argentina.html
+++ b/src/argentina.html
@@ -22,7 +22,7 @@
     ></script>
     <link rel="stylesheet" href="css/argentina.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script type="module" src="js/argentina.js" defer></script>
+    <script type="module" src="js/main.js" defer></script>
     <title>Argentina</title>
   </head>
 
