--- a/src/france2.html
+++ b/src/france2.html
@@ -24,6 +24,7 @@
     ></script>
     <link rel="stylesheet" href="css/france.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script type="module" src="js/main.js" defer></script>
     <title>Document</title>
   </head>
 
