--- a/src/us.html
+++ b/src/us.html
@@ -19,6 +19,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/main.css" />
+    <script type="module" src="js/main.js" defer></script>
     <title>Document</title>
   </head>
 
