Updated location of greeting from dropdowns page to index page. Made a few styling changes to the dropdown menu countries button and the explore button.

--- a/src/dropdowns.html
+++ b/src/dropdowns.html
@@ -33,16 +33,16 @@
       class="bg-image"
       style="background-image: url('img/main/globe_design.jpg'); height: 100vh"
     >
-      <div class="opening-greeting">
-        <h1 id="greeting"></h1>
-      </div>
-      <script src="js/greeting.js"></script>
-
       <div class="color-overlay justify-content-center align-items-start pt-4">
         <div class="button-container">
-          <button class="btn-secondary dropdown-toggle dropdown-button" type="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Countries </button>
+          <button
+            class="btn-secondary dropdown-toggle dropdown-button"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Countries
+          </button>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="argentina.html">Argentina</a>
             <a class="dropdown-item" href="france2.html">France</a>
