--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link href="css/index.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link href="css/index.css" rel="stylesheet" />
     <title>index</title>
-</head>
-<body>
-    <div 
-        class="bg-image"
-        style="background-image: url('img/main/globe_design.jpg'); height: 100vh;">
-
-        <div class="color-overlay d-flex justify-content-center align-items-center title_page_header"> 
-            <h1>Pick Ur Place</h1> 
+  </head>
+  <body>
+    <div
+      class="bg-image"
+      style="background-image: url('img/main/globe_design.jpg'); height: 100vh"
+    >
+      <div
+        class="color-overlay d-flex justify-content-center align-items-center title_page_header"
+      >
+        <div class="opening-greeting">
+          <h1 id="greeting"></h1>
         </div>
+        <script src="js/greeting.js"></script>
+        <!--<h1>Pick Ur Place</h1>-->
+      </div>
     </div>
-    <button class="btn btn-primary" onclick="window.location.href='dropdowns.html';">Explore!</button>
+    <button
+      class="btn btn-primary"
+      onclick="window.location.href='dropdowns.html';"
+    >
+      Explore!
+    </button>
     <!-- <button class="btn">Explore!</button> -->
-</body>
+  </body>
 </html>
