added search bars and alerts

--- a/src/us.html
+++ b/src/us.html
@@ -20,6 +20,7 @@
     ></script>
     <link rel="stylesheet" href="css/main.css" />
     <script type="module" src="js/main.js" defer></script>
+    <script type="module" src="js/search_bar.js" defer></script>
     <title>Document</title>
   </head>
 
@@ -106,6 +107,17 @@
       </div>
     </div>
   </div>
+
+<!--alert button-->
+<div id="alert_box"></div>
+
+
+<!--Search Bar Fucntion-->
+<nav class="search-bar">
+  <form class="form-inline">
+    <input id="searchform" class="search-box" type="search" placeholder="Search for City" />
+  </form>
+</nav>
 
   <!-- This is the container of country city cards. -->
   <div class="container p-3">
@@ -219,7 +231,7 @@
                         This it the <b>first</b> top spot to visit and a blurb
                         about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="spot">
                         Add
                       </button>
                     </div>
@@ -242,7 +254,7 @@
                         This it the <b>second</b> top spot to visit and a
                         blurb about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="spot">
                         Add
                       </button>
                     </div>
@@ -282,7 +294,7 @@
                         This it the <b>first</b> place to eat and a blurb
                         about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="eats">
                         Add
                       </button>
                     </div>
@@ -306,7 +318,7 @@
                         This it the <b>second</b> place to eat and a blurb
                         about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="eats">
                         Add
                       </button>
                     </div>
@@ -343,7 +355,7 @@
                       <p>
                         This it the <b>first</b> lodge and a blurb about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="lodging">
                         Add
                       </button>
                     </div>
@@ -365,7 +377,7 @@
                       <p>
                         This it the <b>second</b> lodge and a blurb about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="lodging">
                         Add
                       </button>
                     </div>
@@ -447,7 +459,7 @@
                         This it the <b>first</b> top spot to visit and a blurb
                         about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="spot">
                         Add
                       </button>
                     </div>
@@ -470,7 +482,7 @@
                         This it the <b>second</b> top spot to visit and a
                         blurb about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="spot">
                         Add
                       </button>
                     </div>
@@ -510,7 +522,7 @@
                         This it the <b>first</b> place to eat and a blurb
                         about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="eats">
                         Add
                       </button>
                     </div>
@@ -534,7 +546,7 @@
                         This it the <b>second</b> place to eat and a blurb
                         about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="eats">
                         Add
                       </button>
                     </div>
@@ -571,7 +583,7 @@
                       <p>
                         This it the <b>first</b> lodge and a blurb about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="lodging">
                         Add
                       </button>
                     </div>
@@ -593,7 +605,7 @@
                       <p>
                         This it the <b>second</b> lodge and a blurb about why.
                       </p>
-                      <button class="add-remove-button btn btn-outline-success">
+                      <button class="add-remove-button btn btn-outline-success" data-type="lodging">
                         Add
                       </button>
                     </div>
