--- a/src/france2.html
+++ b/src/france2.html
@@ -81,7 +81,7 @@
             wonderful trip!
           </p>
           <hr class="destinations-hr" />
-          <ul class="list-group oc-bucket-list-group">
+          <ul class="list-group oc-bucket-list-group" id = "bucket-list">
             <li
               class="list-group-item oc-bucket-list-group-item"
               aria-disabled="false"
@@ -126,8 +126,8 @@
         <div>
           <div class="form-check overlay">
             <label class="city-card-check-box">
-              <input class="form-check-input city-card-input" type="checkbox" value="" id="flexCheckDefault"
-                object-align="left" data-bs-dismiss="offcanvas" aria-label="Close" />
+              <input class="form-check-input city-card-input" type="checkbox" id="ColmarCheckbox"
+                data-city="Colmar" data-country="France" />
             </label>
           </div>
         </div>
@@ -145,8 +145,8 @@
         <div>
           <div class="form-check overlay">
             <label class="city-card-check-box">
-              <input class="form-check-input city-card-input" type="checkbox" value="" id="flexCheckDefault"
-                object-align="left" data-bs-dismiss="offcanvas" aria-label="Close" />
+              <input class="form-check-input city-card-input" type="checkbox" id="ParisCheckbox"
+                data-city="Paris" data-country="France" />
             </label>
           </div>
         </div>
@@ -204,7 +204,7 @@
           <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
-              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+              <div class="accordion accordion-flush w-100" id="TopSpotsList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -266,7 +266,7 @@
           <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
-              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -329,7 +329,7 @@
           <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
-              <div class="accordion accordion-flush w-100" id="LodgingList">
+              <div class="accordion accordion-flush w-100" id="LodgingList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -432,7 +432,7 @@
           <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
-              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+              <div class="accordion accordion-flush w-100" id="TopSpotsList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -494,7 +494,7 @@
           <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
-              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -557,7 +557,7 @@
           <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
-              <div class="accordion accordion-flush w-100" id="LodgingList">
+              <div class="accordion accordion-flush w-100" id="LodgingList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -609,5 +609,8 @@
       </div>
     </div>
   </div>
+  </body>
+  <script type="module" src="js/data.js"></script>
+  <script type="module" src="js/france.js"></script>
   </body>
 </html>
