--- a/src/morocco.html
+++ b/src/morocco.html
@@ -80,7 +80,7 @@
             wonderful trip!
           </p>
           <hr class="destinations-hr" />
-          <ul class="list-group oc-bucket-list-group">
+          <ul class="list-group oc-bucket-list-group" id = "bucket-list">
             <li
               class="list-group-item oc-bucket-list-group-item"
               aria-disabled="false"
@@ -125,8 +125,8 @@
         <div>
           <div class="form-check overlay">
             <label class="city-card-check-box">
-              <input class="form-check-input city-card-input" type="checkbox" value="" id="flexCheckDefault"
-                object-align="left" data-bs-dismiss="offcanvas" aria-label="Close" />
+              <input class="form-check-input city-card-input" type="checkbox" id="CasablancaCheckbox"
+                data-city="Casablanca" data-country="Morocco" />
             </label>
           </div>
         </div>
@@ -144,8 +144,8 @@
         <div>
           <div class="form-check overlay">
             <label class="city-card-check-box">
-              <input class="form-check-input city-card-input" type="checkbox" value="" id="flexCheckDefault"
-                object-align="left" data-bs-dismiss="offcanvas" aria-label="Close" />
+              <input class="form-check-input city-card-input" type="checkbox" id="RabatCheckbox"
+                data-city="Rabat" data-country="Morocco" />
             </label>
           </div>
         </div>
@@ -203,7 +203,7 @@
           <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
-              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+              <div class="accordion accordion-flush w-100" id="TopSpotsList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -265,7 +265,7 @@
           <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
-              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -328,7 +328,7 @@
           <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
-              <div class="accordion accordion-flush w-100" id="LodgingList">
+              <div class="accordion accordion-flush w-100" id="LodgingList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -431,7 +431,7 @@
           <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
-              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+              <div class="accordion accordion-flush w-100" id="TopSpotsList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -493,7 +493,7 @@
           <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
-              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -556,7 +556,7 @@
           <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
-              <div class="accordion accordion-flush w-100" id="LodgingList">
+              <div class="accordion accordion-flush w-100" id="LodgingList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -608,5 +608,8 @@
       </div>
     </div>
   </div>
+  </body>
+  <script type="module" src="js/data.js"></script>
+  <script type="module" src="js/morocco.js"></script>
   </body>
 </html>
