--- a/src/us.html
+++ b/src/us.html
@@ -78,7 +78,7 @@
           wonderful trip!
         </p>
         <hr class="destinations-hr" />
-        <ul class="list-group oc-bucket-list-group">
+        <ul class="list-group oc-bucket-list-group" id = "bucket-list">
           <li
             class="list-group-item oc-bucket-list-group-item"
             aria-disabled="false"
@@ -123,8 +123,8 @@
         <div>
           <div class="form-check overlay">
             <label class="city-card-check-box">
-              <input class="form-check-input city-card-input" type="checkbox" value="" id="flexCheckDefault"
-                object-align="left" data-bs-dismiss="offcanvas" aria-label="Close" />
+              <input class="form-check-input city-card-input" type="checkbox" id="LosAngelesCheckbox"
+                data-city="Los Angeles" data-country="United States" />
             </label>
           </div>
         </div>
@@ -142,8 +142,8 @@
         <div>
           <div class="form-check overlay">
             <label class="city-card-check-box">
-              <input class="form-check-input city-card-input" type="checkbox" value="" id="flexCheckDefault"
-                object-align="left" data-bs-dismiss="offcanvas" aria-label="Close" />
+              <input class="form-check-input city-card-input" type="checkbox" id="NewYorkCheckbox"
+                data-city="New York" data-country="United States" />
             </label>
           </div>
         </div>
@@ -155,7 +155,7 @@
   <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="LosAngeles"
     aria-labelledby="LosAngelesOffCanvas">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="BuenosAiresOffCanvas">
+      <h5 class="offcanvas-title" id="LosAngelesOffCanvas">
         City, State, Country
       </h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -201,7 +201,7 @@
           <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
-              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+              <div class="accordion accordion-flush w-100" id="TopSpotsList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -263,7 +263,7 @@
           <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
-              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -326,7 +326,7 @@
           <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
-              <div class="accordion accordion-flush w-100" id="LodgingList">
+              <div class="accordion accordion-flush w-100" id="LodgingList_1">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -429,7 +429,7 @@
           <div id="TopSpots" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Top Spots information -->
-              <div class="accordion accordion-flush w-100" id="TopSpotsList">
+              <div class="accordion accordion-flush w-100" id="TopSpotsList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -491,7 +491,7 @@
           <div id="PlacesToEat" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Places To Eat information -->
-              <div class="accordion accordion-flush w-100" id="PlacesToEatList">
+              <div class="accordion accordion-flush w-100" id="PlacesToEatList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -554,7 +554,7 @@
           <div id="Lodging" class="accordion-collapse collapse show" data-bs-parent="#MainAccordion">
             <div class="accordion-body nested-first">
               <!-- This is the nested accordion for Lodging information -->
-              <div class="accordion accordion-flush w-100" id="LodgingList">
+              <div class="accordion accordion-flush w-100" id="LodgingList_2">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -606,5 +606,8 @@
       </div>
     </div>
   </div>
+  </body>
+  <script type="module" src="js/data.js"></script>
+  <script type="module" src="js/us.js"></script>
   </body>
 </html>
