Remove duplicate text

--- a/src/argentina.html
+++ b/src/argentina.html
@@ -265,13 +265,6 @@
                           Add
                         </button>
                       </div>
-                      <p>
-                        This it the <b>second</b> top spot to visit and a
-                        blurb about why.
-                      </p>
-                      <button class="add-remove-button btn btn-outline-success" data-type="spot">
-                        Add
-                      </button>
                     </div>
                   </div>
                 </div>
@@ -404,8 +397,8 @@
         </div>
       </div>
     </div>
-    </div>
-    </div>
+    <!-- </div>
+    </div> -->
     
     <!-- This is the offCanvas for Mendoza. -->
     <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="Mendoza"
