fix: Bucket list of array objects, items persist, us.html fixed

--- a/src/us.html
+++ b/src/us.html
@@ -19,8 +19,9 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="css/main.css" />
-    <!-- <script type="module" src="js/main.js" defer></script> -->
     <script type="module" src="js/search_bar.js" defer></script>
+    <script type="module" src="js/us.js"></script>
+    <script type="module" src="js/data.js"></script>
     <title>Document</title>
   </head>
 
@@ -62,7 +63,7 @@
         class="offcanvas-title oc-bucket-list-title"
         id="staticBackdropLabel"
       >
-        MY BUCKET LIST
+        YOUR BUCKET LIST
       </h5>
       <button
         type="button"
@@ -80,29 +81,6 @@
         </p>
         <hr class="destinations-hr" />
         <ul class="list-group oc-bucket-list-group" id = "bucket-list">
-          <li
-            class="list-group-item oc-bucket-list-group-item"
-            aria-disabled="false"
-          >
-            <span>Tokyo: Top Spot 1</span>
-            <button class="btn-delete-list-item">Remove</button>
-          </li>
-          <li class="list-group-item oc-bucket-list-group-item">
-            <span>Tokyo: Top Spot 2</span>
-            <button class="btn-delete-list-item">Remove</button>
-          </li>
-          <li class="list-group-item oc-bucket-list-group-item">
-            <span>Tokyo: Top Spot 3</span>
-            <button class="btn-delete-list-item">Remove</button>
-          </li>
-          <li class="list-group-item oc-bucket-list-group-item">
-            <span>Kyoto: Top Spot 1</span>
-            <button class="btn-delete-list-item">Remove</button>
-          </li>
-          <li class="list-group-item oc-bucket-list-group-item">
-            <span>Kyoto: Top Spot 2</span>
-            <button class="btn-delete-list-item">Remove</button>
-          </li>
         </ul>
       </div>
     </div>
@@ -622,7 +600,5 @@
     </div>
   </div>
   </body>
-  <script type="module" src="js/data.js"></script>
-  <script type="module" src="js/us.js"></script>
   </body>
 </html>
