--- a/src/japan.html
+++ b/src/japan.html
@@ -24,7 +24,6 @@
     ></script>
     <link rel="stylesheet" href="css/japan.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <!-- <script type="module" src="js/main.js" defer></script> -->
     <script type="module" src="js/search_bar.js" defer></script>
     <title>Document</title>
   </head>
@@ -65,7 +64,7 @@
           class="offcanvas-title oc-bucket-list-title"
           id="staticBackdropLabel"
         >
-          MY BUCKET LIST
+          YOUR BUCKET LIST
         </h5>
         <button
           type="button"
@@ -83,29 +82,6 @@
           </p>
           <hr class="destinations-hr" />
           <ul class="list-group oc-bucket-list-group" id = "bucket-list">
-            <li
-              class="list-group-item oc-bucket-list-group-item"
-              aria-disabled="false"
-            >
-              <span>Tokyo: Top Spot 1</span>
-              <button class="btn-delete-list-item">Remove</button>
-            </li>
-            <li class="list-group-item oc-bucket-list-group-item">
-              <span>Tokyo: Top Spot 2</span>
-              <button class="btn-delete-list-item">Remove</button>
-            </li>
-            <li class="list-group-item oc-bucket-list-group-item">
-              <span>Tokyo: Top Spot 3</span>
-              <button class="btn-delete-list-item">Remove</button>
-            </li>
-            <li class="list-group-item oc-bucket-list-group-item">
-              <span>Kyoto: Top Spot 1</span>
-              <button class="btn-delete-list-item">Remove</button>
-            </li>
-            <li class="list-group-item oc-bucket-list-group-item">
-              <span>Kyoto: Top Spot 2</span>
-              <button class="btn-delete-list-item">Remove</button>
-            </li>
           </ul>
         </div>
       </div>
