--- a/src/japan.html
+++ b/src/japan.html
@@ -52,6 +52,12 @@
       </div>
     </nav>
     <hr class="navbar-brand-hr" />
+
+     <!-- Country Title -->
+     <div class="container text-center mt-4">
+      <h1 id="countryTitle">Japan</h1> 
+    </div>
+
     <div
       class="offcanvas offcanvas-start oc-bucket-list"
       data-bs-backdrop="static"
