--- a/src/argentina.html
+++ b/src/argentina.html
@@ -52,6 +52,13 @@
       </div>
     </nav>
     <hr class="navbar-brand-hr" />
+
+     <!-- Country Title -->
+    <div class="container text-center mt-4">
+      <h1 id="countryTitle">Argentina</h1> 
+    </div>
+
+
     <div
     class="offcanvas offcanvas-start oc-bucket-list"
     data-bs-backdrop="static"
