--- a/src/us.html
+++ b/src/us.html
@@ -51,6 +51,12 @@
       </div>
     </nav>
     <hr class="navbar-brand-hr" />
+
+     <!-- Country Title -->
+    <div class="container text-center mt-4">
+      <h1 id="countryTitle">United States</h1> 
+    </div>
+
     <div
     class="offcanvas offcanvas-start oc-bucket-list"
     data-bs-backdrop="static"
