updated Pick Your Place name.

--- a/src/france2.html
+++ b/src/france2.html
@@ -46,7 +46,7 @@
           />
         </button>
         <div class="header-text">
-          <a href="dropdowns.html">PICK UR PLACE</a>
+          <a href="dropdowns.html">PICK YOUR PLACE</a>
         </div>
       </div>
     </nav>
