--- a/src/japan.html
+++ b/src/japan.html
@@ -47,7 +47,7 @@
           />
         </button>
         <div class="header-text">
-          <a href="dropdowns.html">PICK UR PLACE</a>
+          <a href="dropdowns.html">PICK YOUR PLACE</a>
         </div>
       </div>
     </nav>
