Add/Remove City to Bucket List Functionality

--- a/src/japan.html
+++ b/src/japan.html
@@ -163,7 +163,7 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+        <button id="Kyoto-Japan" type="button" class="btn btn-outline-success w-100 add-remove-city">
           Add City to Bucket List
         </button>
       </div>
@@ -391,7 +391,7 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+        <button id="Tokyo-Japan" type="button" class="btn btn-outline-success w-100 add-remove-city">
           Add City to Bucket List
         </button>
       </div>
