--- a/src/morocco.html
+++ b/src/morocco.html
@@ -165,7 +165,7 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+        <button id="Casablanca-Morocco" type="button" class="btn btn-outline-success w-100 add-remove-city">
           Add City to Bucket List
         </button>
       </div>
@@ -393,7 +393,7 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+        <button id="Rabat-Morocco" type="button" class="btn btn-outline-success w-100 add-remove-city">
           Add City to Bucket List
         </button>
       </div>
