--- a/src/us.html
+++ b/src/us.html
@@ -155,7 +155,7 @@
   <div class="offcanvas-body">
     <!-- Add to Bucket List Button -->
     <div class="d-flex justify-content-center align-items-center mb-3">
-      <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+      <button id="Los.Angeles-United~States" type="button" class="btn btn-outline-success w-100 add-remove-city">
         Add City to Bucket List
       </button>
     </div>
@@ -383,7 +383,7 @@
   <div class="offcanvas-body">
     <!-- Add to Bucket List Button -->
     <div class="d-flex justify-content-center align-items-center mb-3">
-      <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+      <button id="New.York-United~States" type="button" class="btn btn-outline-success w-100 add-remove-city">
         Add City to Bucket List
       </button>
     </div>
