--- a/src/argentina.html
+++ b/src/argentina.html
@@ -164,7 +164,7 @@
       <div class="offcanvas-body">
         <!-- Add to Bucket List Button -->
         <div class="d-flex justify-content-center align-items-center mb-3">
-          <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+          <button id="Buenos.Aires-Argentina" type="button" class="btn btn-outline-success w-100 add-remove-city a-ba-city-button">
             Add City to Bucket List
           </button>
         </div>
@@ -394,7 +394,7 @@
       <div class="offcanvas-body">
         <!-- Add to Bucket List Button -->
         <div class="d-flex justify-content-center align-items-center mb-3">
-          <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+          <button id="Mendoza-Argentina" type="button" class="btn btn-outline-success w-100 add-remove-city">
             Add City to Bucket List
           </button>
         </div>
