--- a/src/france2.html
+++ b/src/france2.html
@@ -162,7 +162,7 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+        <button id="Colmar-France" type="button" class="btn btn-outline-success w-100 add-remove-city">
           Add City to Bucket List
         </button>
       </div>
@@ -390,7 +390,7 @@
     <div class="offcanvas-body">
       <!-- Add to Bucket List Button -->
       <div class="d-flex justify-content-center align-items-center mb-3">
-        <button type="button" class="btn btn-outline-success w-100 add-remove-city">
+        <button id="Paris-France" type="button" class="btn btn-outline-success w-100 add-remove-city">
           Add City to Bucket List
         </button>
       </div>
