--- a/src/argentina.html
+++ b/src/argentina.html
@@ -121,7 +121,7 @@
       </div>
 
 
-      <!-- This is the Cordoba card -->
+      <!-- This is the Cordoba card ieieiie-->
       <div class="col-md-3 mb-3">
         <div class="card bg-dark text-white text-center result-items">
           <img src="img/argentina/cordoba/cordoba.webp" class="card-img city-card" />
