--- a/src/dropdowns.html
+++ b/src/dropdowns.html
@@ -22,27 +22,18 @@
 </head>
 
 <body>
-  <!-- <div
-      class="bg-image"
-      style="background-image: url('img/main/globe_design.jpg'); height: 100vh"
-    > -->
-  <div class="color-overlay justify-content-center align-items-start pt-4">
-    <div class="button-container">
-      <button class="btn-secondary dropdown-toggle dropdown-button" type="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Countries
-      </button>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="argentina.html">Argentina</a>
-        <a class="dropdown-item" href="france2.html">France</a>
-        <a class="dropdown-item" href="japan.html">Japan</a>
-        <a class="dropdown-item" href="morocco.html">Morocco</a>
-        <a class="dropdown-item" href="us.html">United States</a>
-      </div>
+  <div class="dropdownbutton-container">
+    <button class="btn-secondary dropdown-toggle dropdown-button" type="button" data-bs-toggle="dropdown"
+      aria-expanded="false">
+      Countries
+    </button>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="argentina.html">Argentina</a>
+      <a class="dropdown-item" href="france2.html">France</a>
+      <a class="dropdown-item" href="japan.html">Japan</a>
+      <a class="dropdown-item" href="morocco.html">Morocco</a>
+      <a class="dropdown-item" href="us.html">United States</a>
     </div>
-  </div>
-  </div>
-  </div>
   </div>
 </body>
 
