--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <div id="home-text">
       <h1 id="greeting"></h1>
       <div id="dropdown-container"></div>
-      <button class="btn btn-primary" onclick="loadDropdown();">
+      <button id="exploreButton" class="btn btn-primary" onclick="loadDropdown();">
         Explore ->
       </button>
     </div>
